--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Live Video Stream</title>
+  <title>Livestream Bomber</title>
   <style>
     #video-container {
       width: 640px;
